# financial-time-series-econometric

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: data_sources.json
data/raw/: BBVA.csv.example  README.md  SAN.csv.example
docs/: build-step-by-step.md  cv-project-entry.md  data-step.md  github-first-steps.md  github-showcase.md  limitations.md  market-selection.md  methodology.md  pipeline.md  project-overview.md  recruiter-review.md  references.md  rerun-analysis.md  results-interpretation.md  testing.md
docs/figures/: README.md
scripts/: download_prices.py  generate_demo_data.py  generate_figures.py  run_analysis.py  run_pipeline.py  validate_data.py
src/econometria_financiera/: __init__.py  data.py  io.py  multivariate.py  project_config.py  reporting.py  univariate.py  validation.py  volatility.py
tests/: test_data.py  test_io.py  test_project_config.py  test_validate_data.py
